# arraydeque

./: Cargo.toml
src/: array.rs  behavior.rs  lib.rs
