[package]
edition = "2018"
publish = false
name = "arraydeque"
version = "0.5.0"
authors = ["andylokandy", "Keunhong Lee"]
license = "MIT/Apache-2.0"

description = "A ring buffer with a fixed capacity, which can be stored on the stack."
documentation = "https://docs.rs/arraydeque"
repository = "https://github.com/ANLAB-KAIST/arraydeque"
homepage = "https://github.com/ANLAB-KAIST/arraydeque"

keywords = ["ring", "circular", "stack", "deque", "array"]
categories = ["no-std", "data-structures", "memory-management"]

[dependencies]
generic-array = { version = "0.14" }

[features]
default = ["generic-array/more_lengths"]
